--- a/pages/contact-us.html
+++ b/pages/contact-us.html
@@ -9,8 +9,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
-        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
         rel="stylesheet">
 
@@ -31,7 +29,7 @@
     <link rel="stylesheet" href="../css/responsive.css">
     <link rel="stylesheet" href="../css/breadcrumb.css">
     <link rel="stylesheet" href="../css/btn.css">
-<link rel="stylesheet" href="../css/scrool-to-top.css">
+    <link rel="stylesheet" href="../css/scrool-to-top.css">
 
 
 </head>
@@ -392,140 +390,112 @@
         </div>
     </header>
 
-
     <main class="min-h-screen ">
         <!-- breadcrumb -->
         <section
-            class="rs-breadcrumb-area rs-customization-breadcrumb max-w-2lg mx-auto px-4 bg-[url('../assets/img/bg/breadcrumb-bg.jpg')] bg-cover bg-center relative overflow-hidden mb-[50px] z-[1] text-center">
-            <div class="rs-breadcrumb-content pt-[60px] pb-[60px]">
-                <h1 class="rs-breadcrumb-title font-bold text-5xl leading-[117%] mb-4">
-                    Privacy Policy
+            class="rs-breadcrumb-area max-w-2lg mx-auto px-4  bg-[url('../assets/img/bg/breadcrumb-bg.jpg')] bg-cover bg-center relative overflow-hidden mb-10 z-[1]">
+            <div class="rs-breadcrumb-content pt-[60px] pb-[60px] text-center">
+                <h1 class="rs-breadcrumb-title font-bold text-5xl leading-[117%] mb-3">
+                    Contact Us
                 </h1>
                 <p class="rs-breadcrumb-text text-lg font-light leading-[144%]">
-                    At RazinSoft, we are committed to protecting your privacy and ensuring a safe online experience. This Privacy Policy <br> outlines how we collect, use, and safeguard your personal information when you visit our website <a href="https://razinsoft.com/" class="text-primary underline">www.razinsoft.com.</a>
+                    Customers can utilize the customer app to conveniently browse products, make purchases, track
+                    orders, and stay <br> updated s, experience and fostering brand loyalty.
                 </p>
             </div>
         </section>
 
-        <!-- privacy-policy -->
-        <section class="rs-privacy-policy-area max-w-2lg mx-auto px-4">
-            <div class="rs-privacy-policy-content">
-                <!-- 1. Information We Collect -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">1. Information We Collect</h2>
-                <ul class="mb-8 list-disc list-inside">
-                    <li class="font-medium text-lg mb-2">
-                    Personal Information:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        We may collect personal information such as your name, email address, phone number, and payment details when you contact us, purchase our services, or sign up for our newsletter.
-                    </p>
-                    </li>
-                    <li class="font-medium text-lg mb-2">
-                    Usage Data:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        We collect information about your interaction with our website, including IP address, browser type, and pages visited. This helps us understand how our website is used and improve your experience.
-                    </p>
-                    </li>
-                </ul>
-
-                <!-- 2. How We Use Your Information -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">2. How We Use Your Information</h2>
-                <ul class="mb-8 list-disc list-inside">
-                    <li class="font-medium text-lg mb-2">
-                    To Provide and Improve Services:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        We use your personal information to process orders, provide customer support, and enhance our services.
-                    </p>
-                    </li>
-                    <li class="font-medium text-lg mb-2">
-                    To Communicate with You:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        We may use your contact information to send you updates, promotional materials, or other information related to our services. You can opt out of these communications at any time.
-                    </p>
-                    </li>
-                    <li class="font-medium text-lg mb-2">
-                    To Analyze Website Usage:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        We use usage data to analyze trends, track user activity, and improve our website’s functionality and user experience.
-                    </p>
-                    </li>
-                </ul>
-
-                <!-- 3. Sharing Your Information -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">3. Sharing Your Information</h2>
-                <ul class="mb-8 list-disc list-inside">
-                    <li class="font-medium text-lg mb-2">
-                    Third-Party Service Providers:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        We may share your information with third-party service providers who assist us in operating our website, processing payments, or delivering services. These providers are obligated to protect your information and use it only for the purposes specified by us.
-                    </p>
-                    </li>
-                    <li class="font-medium text-lg mb-2">
-                    Legal Requirements:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        We may disclose your information if required by law or in response to valid requests by public authorities.
-                    </p>
-                    </li>
-                </ul>
-
-                <!-- 4. Data Security -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">4. Data Security</h2>
-                <ul class="mb-8 list-disc list-inside">
-                    <li class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44]">
-                    We implement reasonable security measures to protect your personal information from unauthorized access, use, or disclosure. However, no data transmission over the internet or electronic storage is completely secure, and we cannot guarantee absolute security.
-                    </li>
-                </ul>
-
-                <!-- 5. Cookies and Tracking Technologies -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">5. Cookies and Tracking Technologies</h2>
-                <ul class="mb-8 list-disc list-inside">
-                    <li class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44]">
-                    Our website may use cookies and similar tracking technologies to enhance user experience and gather information about website usage. You can control cookies through your browser settings, but disabling cookies may affect your ability to use certain features of our website.
-                    </li>
-                </ul>
-
-                <!-- 6. Your Rights -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">6. Your Rights</h2>
-                <ul class="mb-8 list-disc list-inside">
-                    <li class="font-medium text-lg mb-2">
-                    Access and Correction:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        You have the right to access and correct your personal information. To do so, please contact us at <a href="https://razinsoft.com/contact-us" class="text-primary underline">support@razinsoft.com</a>.
-                    </p>
-                    </li>
-                    <li class="font-medium text-lg mb-2">
-                    Opt-Out:
-                    <p class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44] mt-[3px]">
-                        You may opt out of receiving promotional communications from us by following the unsubscribe instructions in the emails or contacting us directly.
-                    </p>
-                    </li>
-                </ul>
-
-                <!-- 7. Third-Party Links -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">7. Third-Party Links</h2>
-                <ul class="mb-8 ">
-                    <li class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44]">
-                    Our website may contain links to third-party websites. We are not responsible for the privacy practices or content of these external sites. We encourage you to review the privacy policies of any third-party sites you visit.
-                    </li>
-                </ul>
-
-                <!-- 8. Changes to This Privacy Policy -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">8. Changes to This Privacy Policy</h2>
-                <ul class="mb-8 ">
-                    <li class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44]">
-                    We may update this Privacy Policy from time to time. Any changes will be posted on our website, and your continued use of our website constitutes acceptance of the revised policy.
-                    </li>
-                </ul>
-
-                <!-- 9. Contact Us -->
-                <h2 class="text-2xl font-semibold font-poppins mb-4">9. Contact Us</h2>
-                <ul class="mb-8 ">
-                    <li class="font-light text-lg text-[rgba(255,255,255,0.6)] leading-[1.44]">
-                    If you have any questions or concerns about this Privacy Policy, please contact us at <a href="https://razinsoft.com/contact-us" class="text-primary underline">support@razinsoft.com</a>.
-                    </li>
-                </ul>
+        <!-- collaborate -->
+        <section class="rs-collaborate-area max-w-2lg mx-auto px-4 mb-[80px]">
+            <div class="grid grid-cols-12 gap-1 sm:gap-10">
+                <div class="col-span-12 lg:col-span-6">
+                    <div class="rs-collaborate-thumb h-full relative ml-[68px]">
+                        <img class="rounded-2xl h-full object-cover" src="../assets/img/collaborate/collaborate-01.jpg" alt="">
+                        <div class="absolute z-[1] absolute bottom-[16px] left-1/2 -translate-x-1/2 w-full px-4">
+                            <p class="text-lg font-normal leading-[167%] mb-4">
+                                Need Urgent Help? <br>
+                                Call Us at <a href="tel:+8801768572658" class="duration-300 ease-in-out">
+                                    📞+88 01768572658</a> or Connect With Us on Social Media
+                            </p>
+                            <div class="flex items-center justify-between gap-2">
+                                <a href="mailto:support@razinsoft.com"
+                                    class="rs-contact-btn text-sm font-normal flex items-center gap-[10.25px] relative rounded-[8px] h-[48px] w-[33%] justify-center bg-[linear-gradient(90deg,rgba(255,254,254,0.08)_0%,rgba(0,0,0,1)_50%,rgba(255,254,254,0.08)_100%)] overflow-hidden">
+                                    <img src="../assets/img/icons/envelope-white.svg" alt="">
+                                    Directly Email
+                                    <span
+                                        class="border-anim border-anim-2 bg-gradient-[131.52deg,rgba(0,0,0,0)_0%,rgba(221,84,84,0.686)_50%,rgba(0,0,0,0)_100%]"></span>
+                                </a>
+                                <a href="tel:+8801768572658"
+                                    class="rs-contact-btn text-sm font-normal flex items-center gap-[10.25px] relative rounded-[8px] h-[48px] w-[33%] justify-center bg-[linear-gradient(90deg,rgba(255,254,254,0.08)_0%,rgba(0,0,0,1)_50%,rgba(255,254,254,0.08)_100%)] overflow-hidden">
+                                    <img src="../assets/img/icons/whatsapp-white.svg" alt="">
+                                    WhatsApp
+                                    <span
+                                        class="border-anim border-anim-2 bg-gradient-[131.52deg,rgba(0,0,0,0)_0%,rgba(221,84,84,0.686)_50%,rgba(0,0,0,0)_100%]"></span>
+                                </a>
+                                <a href="#"
+                                    class="rs-contact-btn text-sm font-normal flex items-center gap-[10.25px] relative rounded-[8px] h-[48px] w-[33%] justify-center bg-[linear-gradient(90deg,rgba(255,254,254,0.08)_0%,rgba(0,0,0,1)_50%,rgba(255,254,254,0.08)_100%)] overflow-hidden">
+                                    <img src="../assets/img/icons/messenger-white.svg" alt="">
+                                    Messenger
+                                    <span
+                                        class="border-anim border-anim-2 bg-gradient-[131.52deg,rgba(0,0,0,0)_0%,rgba(221,84,84,0.686)_50%,rgba(0,0,0,0)_100%]"></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-span-12 lg:col-span-6">
+                    <form action="#" class="rs-collaborate-form">
+                        <h3 class="text-5xl font-semibold leading-[117%] mb-[22px]">
+                            Let’s Collaborate Now!
+                        </h3>
+                        <label class="text-lg font-medium mb-4 block">Your Email</label>
+                        <input type="email" placeholder="Input Your Email" class="rs-collaborate-form w-full h-[56px] px-4 rounded-[12px] bg-[rgba(255,255,255,0.12)] border border-transparent text-gray-100 placeholder-gray-500 font-normal text-base 
+                        focus:border-red-500 focus:text-gray-100 focus:placeholder-transparent outline-none mb-4">
+                        <label class="text-lg font-medium mb-4 block">Subject</label>
+                        <input type="text" placeholder="Input Your Subject" class="rs-collaborate-form w-full h-[56px] px-4 rounded-[12px] bg-[rgba(255,255,255,0.12)] border border-transparent text-gray-100 placeholder-gray-500 font-normal text-base 
+                        focus:border-red-500 focus:text-gray-100 focus:placeholder-transparent outline-none mb-4">
+                        <label class="text-lg font-medium mb-4 block">Subject</label>
+                        <textarea name="message" placeholder="Input Your Message" class="rs-collaborate-form w-full h-[132px] px-4 rounded-[12px] bg-[rgba(255,255,255,0.12)] border border-transparent text-gray-100 placeholder-gray-500 font-normal text-base focus:border-red-500 focus:text-gray-100 focus:placeholder-transparent outline-none mb-4 pt-4"></textarea>
+                         <div class="common-btn rs-buy-now-btn ml-0 mr-0 llg:ml-auto llg:mr-2 md:ml-auto md:mr-2 lg:ml-0 lg:mr-0">
+                            <button type="submit" class="text-base font-medium text-primary h-12 w-[172px] px-6">Submit <span class="border-anim"></span>
+                            </button>
+                        </div>
+                    </form>
+                </div>
             </div>
         </section>
 
+        <!-- need-help -->
+        <section class="need-help relative overflow-hidden pt-[80px]">
+            <div class="max-w-2lg mx-auto px-4  pb-[80px]">
+                <div class="grid grid-cols-12 gap-10">
+                    <div class="col-span-12 lg:col-span-6">
+                        <div class="section-title h-full flex flex-col justify-center">
+                            <h3 class="font-bold text-5xl leading-[117%] mb-2">
+                                Need Help? <br> Open a Support Ticket!
+                            </h3>
+
+                            <p class="text-base font-normal leading-[150%] text-[rgba(255,255,255,0.6)] mb-6">
+                                Facing an issue? Let us know, and we’ll get back to you as soon as possible.
+                            </p>
+                            <div class="common-btn">
+                                <a href="#"
+                                    class="text-base font-medium text-primary h-12 w-[172px] flex items-center justify-center gap-4">
+                                    <img src="../assets/img/icons/headphones.svg" alt="">
+                                    Open Ticket
+                                    <span class="border-anim"></span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-span-12 lg:col-span-6">
+                        <div class="support">
+                            <img class="rounded-3xl" src="../assets/img/support/help-img.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 
     <!-- footer section  -->
@@ -599,7 +569,7 @@
                         <div class="number mb-3 flex items-center gap-[10px]">
                             <div class="number-items bg-[rgba(255,255,255,0.04)] p-3 rounded-lg pt-[11px] pb-[11px]">
                                 <span class="text-sm font-normal mb-1 block">Queries </span>
-                                <a class="font-medium text-lg mb-2 text-[#3b82f6] flex items-center gap-1"
+                                <a class="font-medium text-lg text-[#3b82f6] flex items-center gap-1"
                                     href="tel:+8801234567890">
                                     <i
                                         class="w-6 h-6 backdrop-blur-[6.4px] bg-[rgba(37,211,102,0.16)] rounded-[4px] flex items-center justify-center"><img
@@ -609,7 +579,7 @@
                             </div>
                             <div class="number-items bg-[rgba(255,255,255,0.04)] p-3 rounded-lg pt-[11px] pb-[11px]">
                                 <span class="text-sm font-normal mb-1 block">Queries </span>
-                                <a class="font-medium text-lg mb-2 text-[#3b82f6] flex items-center gap-1"
+                                <a class="font-medium text-lg text-[#3b82f6] flex items-center gap-1"
                                     href="tel:+8801234567890">
                                     <i
                                         class="w-6 h-6 backdrop-blur-[6.4px] bg-[rgba(37,211,102,0.16)] rounded-[4px] flex items-center justify-center"><img
